model registry and staging updated

--- a/02-training/experiment_tracking/notebooks/model_registry.ipynb
+++ b/02-training/experiment_tracking/notebooks/model_registry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,30 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/05/29 03:20:45 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-duration-experiment-0529' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/2', creation_time=1685279313985, experiment_id='2', last_update_time=1685279313985, lifecycle_stage='active', name='nyc-taxi-duration-experiment-0528', tags={}>"
+       "<Experiment: artifact_location='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/2', creation_time=1685310645412, experiment_id='2', last_update_time=1685310645412, lifecycle_stage='active', name='nyc-taxi-duration-experiment-0529', tags={}>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tracking_uri = \"sqlite:///mlflow.sqlite.db\"\n",
+    "tracking_uri = \"sqlite:///mlflow-run.sqlite.db\"\n",
     "\n",
     "mlflow.set_tracking_uri(tracking_uri)\n",
-    "mlflow.set_experiment(\"nyc-taxi-duration-experiment-0528\")"
+    "mlflow.set_experiment(\"nyc-taxi-duration-experiment-0529\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,13 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023/05/29 03:21:18 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/venv/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n",
       "/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\n"
      ]
@@ -147,9 +155,9 @@
    ],
    "source": [
     "for model_class in (LinearRegression, DecisionTreeRegressor, RandomForestRegressor,\n",
-    "                     GradientBoostingRegressor, ExtraTreesRegressor, LinearSVR):\n",
+    "                     GradientBoostingRegressor, LinearSVR):\n",
     "\n",
-    "    with mlflow.start_run(experiment_id= '2'):\n",
+    "    with mlflow.start_run():\n",
     "        mlflow.log_params({\"train_data\": train_data_path,\n",
     "                        \"validation_data\": val_data_path})\n",
     "        mlflow.set_tags({\"model\": model_class, \"developer\": \"Saheli\"})\n",
@@ -168,39 +176,33 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Create experiment and train models using MLflowClient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from mlflow import MlflowClient\n",
     "\n",
-    "MLFLOW_TRACKING_URI = \"sqlite:///mlflow.sqlite.db\"\n",
+    "MLFLOW_TRACKING_URI = \"sqlite:///mlflow-run.sqlite.db\"\n",
     "client = MlflowClient(tracking_uri=MLFLOW_TRACKING_URI)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: nyc-taxi-duration-0528-v2\n",
-      "Experiment_id: 5\n",
+      "Name: nyc-taxi-duration-experiment-0528\n",
+      "Experiment_id: 3\n",
       "Artifact Location: /Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns\n",
       "Tags: {'version': 'v1', 'priority': 'P1', 'regression.framework': 'Duration prediction'}\n",
       "Lifecycle_stage: active\n"
@@ -210,7 +212,7 @@
    "source": [
     "## Creating experiment using MLflow client\n",
     "experiment_id = client.create_experiment(\n",
-    "                                            \"nyc-taxi-duration-0528-v2\",\n",
+    "                                            \"nyc-taxi-duration-experiment-0528\",\n",
     "                                            artifact_location= \"./mlruns/\",\n",
     "                                            tags = {\"version\": \"v1\", \"priority\": \"P1\"}\n",
     "                                        )\n",
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,16 +255,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run_id : f023a5ae4210482dbfc9e3f2d175879e, model : GradientBoostingRegressor, rmse : 6.7423\n",
-      "run_id : 3aafc3e2048f4633ba8b00bcf4996d4f, model : RandomForestRegressor, rmse : 6.8993\n",
-      "run_id : 6019128a3a054f60b7e4a537aed45f06, model : ExtraTreesRegressor, rmse : 6.9410\n"
+      "run_id : 8823b247ecbf46b787cca32be1f1665f, model : GradientBoostingRegressor, rmse : 6.7423\n",
+      "run_id : 4709074be5fb4cb68e25c5c3a7635dfd, model : RandomForestRegressor, rmse : 6.9116\n"
      ]
     }
    ],
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -300,23 +301,23 @@
      "output_type": "stream",
      "text": [
       "Registered model 'NYC-Ride-Duration-Regressor' already exists. Creating a new version of this model...\n",
-      "2023/05/29 00:23:30 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: NYC-Ride-Duration-Regressor, version 5\n",
-      "Created version '5' of model 'NYC-Ride-Duration-Regressor'.\n"
+      "2023/05/29 03:38:41 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: NYC-Ride-Duration-Regressor, version 2\n",
+      "Created version '2' of model 'NYC-Ride-Duration-Regressor'.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: aliases=[], creation_timestamp=1685300010974, current_stage='None', description=None, last_updated_timestamp=1685300010974, name='NYC-Ride-Duration-Regressor', run_id='f023a5ae4210482dbfc9e3f2d175879e', run_link=None, source='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/2/f023a5ae4210482dbfc9e3f2d175879e/artifacts/model', status='READY', status_message=None, tags={'model': 'GradientBoostingRegressor'}, user_id=None, version=5>"
+       "<ModelVersion: aliases=[], creation_timestamp=1685311721801, current_stage='None', description=None, last_updated_timestamp=1685311721801, name='NYC-Ride-Duration-Regressor', run_id='8823b247ecbf46b787cca32be1f1665f', run_link=None, source='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/2/8823b247ecbf46b787cca32be1f1665f/artifacts/model', status='READY', status_message=None, tags={'model': 'GradientBoostingRegressor'}, user_id=None, version=2>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run_id = \"f023a5ae4210482dbfc9e3f2d175879e\"\n",
+    "run_id = \"8823b247ecbf46b787cca32be1f1665f\"\n",
     "model_uri = f'runs:/{run_id}/model'\n",
     "version_name = \"GradientBoostingRegressor\"\n",
     "\n",
@@ -335,30 +336,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/05/29 00:32:37 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: NYC-Ride-Duration-GBMRegressor, version 1\n"
+      "2023/05/29 03:39:48 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: NYC-Ride-Duration-Regressor-v2, version 1\n"
      ]
     }
    ],
    "source": [
-    "client.create_registered_model(\"NYC-Ride-Duration-GBMRegressor\")\n",
+    "client.create_registered_model(\"NYC-Ride-Duration-Regressor-v2\")\n",
     "\n",
     "\n",
     "result = client.create_model_version(\n",
-    "    name = \"NYC-Ride-Duration-GBMRegressor\",\n",
+    "    name = \"NYC-Ride-Duration-Regressor-v2\",\n",
     "    source = model_uri,\n",
     "    run_id = run_id,\n",
     "    description= \"GradientBoosting regression model\"\n",
     ")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## delete registered model\n",
-    "# client.delete_registered_model(name=\"NYC-Ride-Duration-GBMRegressor\")"
+    "client.delete_registered_model(name=\"NYC-Ride-Duration-Regressor-v2\")"
    ]
   },
   {
@@ -371,23 +380,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "version: 1, run_id: a6839b8f0da24a8a9c71f651b83b8e1b, stage: Staging\n",
+      "version: 2, run_id: 8823b247ecbf46b787cca32be1f1665f, stage: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = \"NYC-Ride-Duration-Regressor\"\n",
+    "\n",
+    "latest_versions = client.get_latest_versions(name = model_name)\n",
+    "\n",
+    "for version in latest_versions:\n",
+    "    print(f\"version: {version.version}, run_id: {version.run_id}, stage: {version.current_stage}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: aliases=[], creation_timestamp=1685301982376, current_stage='Staging', description='This model version 6 was trasitioned to staging on 2023-05-29', last_updated_timestamp=1685302000096, name='NYC-Ride-Duration-Regressor', run_id='12feba662000405f9284453a12bf67f6', run_link='', source='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/2/12feba662000405f9284453a12bf67f6/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=6>"
+       "<ModelVersion: aliases=[], creation_timestamp=1685312044679, current_stage='Staging', description='This model version 3 was trasitioned to Staging on 2023-05-29', last_updated_timestamp=1685312097391, name='NYC-Ride-Duration-Regressor', run_id='4709074be5fb4cb68e25c5c3a7635dfd', run_link='', source='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/2/4709074be5fb4cb68e25c5c3a7635dfd/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=3>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_version = 6\n",
-    "new_stage = \"staging\"\n",
+    "model_version = 3\n",
+    "new_stage = \"Staging\"\n",
     "\n",
     "client.transition_model_version_stage(\n",
     "                                        name = model_name,\n",
@@ -400,22 +432,8 @@
     "client.update_model_version(\n",
     "                                name = model_name,\n",
     "                                version= model_version,\n",
-    "                                description= f\"This model version {model_version} was trasitioned to {new_stage} on {date.today()}\"\n",
+    "                                description= f\"This model version {model_version} was transitioned to {new_stage} on {date.today()}\"\n",
     "                            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"NYC-Ride-Duration-Regressor\"\n",
-    "\n",
-    "latest_versions = client.get_latest_versions(name = model_name)\n",
-    "\n",
-    "for version in latest_versions:\n",
-    "    print(f\"version: {version.version}, run_id: {version.run_id}, stage: {version.current_stage}\")"
    ]
   },
   {
@@ -428,16 +446,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "version: 2, stage: Archived\n",
-      "version: 6, stage: Staging\n",
-      "version: 4, stage: Production\n"
+      "version: 3, stage: Staging\n",
+      "version: 2, stage: Production\n"
      ]
     }
    ],
@@ -459,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +496,6 @@
     "\n",
     "with open(prod_preprocess_uri, 'rb') as f:\n",
     "    dv = pickle.load(f)\n",
-    "\n",
     "\n",
     "test_data_path = \"/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/01-intro/data/test/green_tripdata_2021-03.parquet\"\n",
     "\n",
@@ -489,14 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/05/29 01:36:57 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      "2023/05/29 03:47:29 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
       " - mlflow (current: 2.3.2, required: mlflow==2.3)\n",
       "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
      ]
@@ -505,22 +521,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 121 ms, sys: 4.93 ms, total: 126 ms\n",
-      "Wall time: 125 ms\n"
+      "CPU times: user 134 ms, sys: 7.01 ms, total: 141 ms\n",
+      "Wall time: 183 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rmse': 7.403930760220898}"
+       "{'rmse': 6.659623830022514}"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%time test_model(X_test, y_test, name = model_name, stage = \"Production\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/05/29 03:47:47 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - mlflow (current: 2.3.2, required: mlflow==2.3)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.6 s, sys: 544 ms, total: 7.14 s\n",
+      "Wall time: 7.33 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': 6.888288175453307}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time test_model(X_test, y_test, name = model_name, stage=\"Staging\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.delete_model_version(name = model_name, version='1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/05/29 03:54:21 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - mlflow (current: 2.3.2, required: mlflow==2.3)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.52 s, sys: 469 ms, total: 6.99 s\n",
+      "Wall time: 7.05 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': 6.888288175453307}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.transition_model_version_stage(name= model_name, \n",
+    "                                      version=3, \n",
+    "                                      stage = \"production\",\n",
+    "                                      archive_existing_versions= True,\n",
+    "                                      description = f\"Move to Production on {date.today()}\")\n",
+    "\n",
     "%time test_model(X_test, y_test, name = model_name, stage = \"Production\")"
    ]
   }
