--- a/02-training/experiment_tracking/notebooks/duration_predict.ipynb
+++ b/02-training/experiment_tracking/notebooks/duration_predict.ipynb
@@ -38,9 +38,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/05/29 03:14:01 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-duration-experiment-0527' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/1', creation_time=1685199250624, experiment_id='1', last_update_time=1685199250624, lifecycle_stage='active', name='nyc-taxi-duration-experiment-0527', tags={}>"
+       "<Experiment: artifact_location='/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training/mlruns/1', creation_time=1685310241905, experiment_id='1', last_update_time=1685310241905, lifecycle_stage='active', name='nyc-taxi-duration-experiment-0527', tags={}>"
       ]
      },
      "execution_count": 3,
@@ -49,7 +56,7 @@
     }
    ],
    "source": [
-    "tracking_uri = \"sqlite:///mlflow.sqlite.db\"\n",
+    "tracking_uri = \"sqlite:///mlflow-run.sqlite.db\"\n",
     "\n",
     "mlflow.set_tracking_uri(tracking_uri)\n",
     "mlflow.set_experiment(\"nyc-taxi-duration-experiment-0527\")\n",
@@ -161,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,27 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/NYC_Ride_Duration_Prediction/Predicting-Ride-Duration/02-training'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -30416,7 +30403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30434,21 +30421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/05/28 15:42:35 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'f1bfd6ee07c244968b224fff9df6f39f', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
+      "2023/05/29 03:15:33 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID '404250a9620248f0a1b323917698f1d1', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[15:42:35] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[03:15:33] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "[0]\tvalidation-rmse:19.15662\n",
       "[1]\tvalidation-rmse:17.37797\n",
       "[2]\tvalidation-rmse:15.82681\n",
@@ -31455,8 +31442,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/05/28 15:44:02 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n",
-      "2023/05/28 15:44:05 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/venv/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n"
+      "2023/05/29 03:16:58 WARNING mlflow.xgboost: Failed to infer model signature: could not sample data to infer model signature: please ensure that autologging is enabled before constructing the dataset.\n",
+      "2023/05/29 03:17:00 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/Users/sahelimukherjee/Documents/Personal/Learning/MLOps/projects/venv/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n"
      ]
     }
    ],
@@ -31472,11 +31459,35 @@
     "                        num_boost_round=1000,\n",
     "                        evals=[(val, 'validation')],\n",
     "                        early_stopping_rounds=50\n",
-    "                    )\n",
-    "\n",
+    "                    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/05/29 03:18:10 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - mlflow (current: 2.3.2, required: mlflow==2.3)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[03:18:10] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    }
+   ],
+   "source": [
     "## use auto-logged model to make predictions\n",
     "## using python_func flavour\n",
-    "logged_model = \"./mlruns/1/f1bfd6ee07c244968b224fff9df6f39f/artifacts/model\"\n",
+    "logged_model = \"./mlruns/1/404250a9620248f0a1b323917698f1d1/artifacts/model\"\n",
     "loaded_model = mlflow.pyfunc.load_model(logged_model)\n",
     "\n",
     "y_pred = loaded_model.predict(X_val)"
@@ -31484,14 +31495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17:32:11] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[03:19:05] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "[0]\tvalidation-rmse:19.15662\n",
       "[1]\tvalidation-rmse:17.37797\n",
       "[2]\tvalidation-rmse:15.82681\n",
@@ -32491,10 +32502,7 @@
       "[996]\tvalidation-rmse:6.29694\n",
       "[997]\tvalidation-rmse:6.29678\n",
       "[998]\tvalidation-rmse:6.29666\n",
-      "[999]\tvalidation-rmse:6.29641\n",
-      "[17:33:04] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[15.010356   7.0617857 14.527162  24.338861   9.28601   17.136171\n",
-      " 11.580663   8.718143   8.960651  20.091238 ]\n"
+      "[999]\tvalidation-rmse:6.29641\n"
      ]
     }
    ],
@@ -32521,15 +32529,7 @@
     "\n",
     "    with open(\"models/preprocessor.b\", \"wb\") as f:\n",
     "        pickle.dump(dv, f)\n",
-    "    mlflow.log_artifact(\"models/preprocessor.b\", artifact_path= \"preprocessor\")\n",
-    "\n",
-    "\n",
-    "## using logged model to make predictions\n",
-    "## using xgboost flavour\n",
-    "model_uri = \"runs:/9e9a73877a704c3680d249a0234f7627/mlflow_model\"\n",
-    "xgboost_model = mlflow.xgboost.load_model(model_uri)\n",
-    "y_pred = xgboost_model.predict(val)\n",
-    "print(y_pred[:10])"
+    "    mlflow.log_artifact(\"models/preprocessor.b\", artifact_path= \"preprocessor\")\n"
    ]
   },
   {
@@ -32540,10 +32540,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[03:20:07] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[15.010356   7.0617857 14.527162  24.338861   9.28601   17.136171\n",
+      " 11.580663   8.718143   8.960651  20.091238 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## using logged model to make predictions\n",
+    "## using xgboost flavour\n",
+    "model_uri = \"runs:/2311c4c9ffe942458a0038ccc8201e51/mlflow_model\"\n",
+    "xgboost_model = mlflow.xgboost.load_model(model_uri)\n",
+    "y_pred = xgboost_model.predict(val)\n",
+    "print(y_pred[:10])"
+   ]
   }
  ],
  "metadata": {
