created example scenarios

--- a/02-training/experiment_tracking/notebooks/model_registry.ipynb
+++ b/02-training/experiment_tracking/notebooks/model_registry.ipynb
@@ -154,7 +154,7 @@
     }
    ],
    "source": [
-    "for model_class in (LinearRegression, DecisionTreeRegressor, RandomForestRegressor,\n",
+    "for model_class in (ExtraTreesRegressor, RandomForestRegressor,\n",
     "                     GradientBoostingRegressor, LinearSVR):\n",
     "\n",
     "    with mlflow.start_run():\n",
